fix: update index.html to reference main.jsx instead of main.tsx
- Change script src from /src/main.tsx to /src/main.jsx
- Matches actual file structure in the project
- Fixes build errors related to missing TypeScript entry file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Life Story - Preserve Your Memories</title>
+  <meta name="description"
+    content="A gentle guide to help you capture your life's memories, one conversation at a time. Simple, meaningful, and made for you." />
+  <meta name="author" content="Life Story" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Source+Sans+3:wght@300;400;500;600&display=swap"
+    rel="stylesheet">
+
+  <meta property="og:title" content="Life Story - Preserve Your Memories" />
+  <meta property="og:description"
+    content="A gentle guide to help you capture your life's memories, one conversation at a time." />
+  <meta property="og:type" content="website" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
